--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,3 +88,38 @@
   padding: 3px 10px;
   border-radius: 8px;
 }
+
+/* sub menu */
+.sub-menu {
+  position: relative;
+  z-index: 999;
+}
+.sub-menu ul {
+  position: absolute;
+  right: 0;
+  top: 100%;
+  list-style: none;
+  padding: 0;
+  background: rgb(228, 211, 227);
+  margin: 0;
+  min-width: 180px;
+  display: none;
+}
+.sub-menu ul li {
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+}
+.sub-menu:hover > ul {
+  display: block;
+}
+.sub-menu ul li {
+  position: relative;
+}
+.sub-menu ul li ul {
+  right: 100%;
+  top: 0;
+}
+.sub-menu ul li:hover > ul {
+  display: block;
+}
+/* end sub menu */
