--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -1,3 +1,5 @@
+include ../mixins/sub-menu.pug
+
 header.header 
   .container 
     .row.align-items-center 
@@ -11,5 +13,7 @@ header.header
           ul 
             li 
               a(href="/") Trang chu 
-            li 
-              a(href="/product") San pham 
+            li(class="sub-menu")
+              -const pathProduct = "/products"
+              a(href= pathProduct) San pham
+                +sub-menu(layoutProductsCategory, pathProduct) 
